--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "prisma": "^6.12.0",
     "react": "19.1.0",
     "react-dom": "19.1.0",
+    "react-icons": "^5.5.0",
     "recharts": "^3.1.0",
     "tailwindcss": "^3.4.17"
   },
