--- a/package.json
+++ b/package.json
@@ -11,10 +11,12 @@
   },
   "dependencies": {
     "@prisma/client": "^6.12.0",
+    "@types/luxon": "^3.6.2",
     "autoprefixer": "^10.4.21",
     "cron": "^4.3.2",
     "date-fns": "^4.1.0",
     "lucide-react": "^0.525.0",
+    "luxon": "^3.7.1",
     "next": "15.4.2",
     "next-themes": "^0.4.6",
     "prisma": "^6.12.0",
