--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "date-fns": "^4.1.0",
     "lucide-react": "^0.525.0",
     "luxon": "^3.7.1",
+    "ml-regression": "^6.3.0",
     "next": "15.4.2",
     "next-themes": "^0.4.6",
     "prisma": "^6.12.0",
@@ -24,6 +25,7 @@
     "react-dom": "19.1.0",
     "react-icons": "^5.5.0",
     "recharts": "^3.1.0",
+    "simple-statistics": "^7.8.8",
     "tailwindcss": "^3.4.17"
   },
   "devDependencies": {
