--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "build": "prisma generate && next build",
     "start": "next start",
     "lint": "next lint",
-    "postinstall": "prisma generate"
+    "postinstall": "prisma generate",
+    "deploy": "next build && next start"
   },
   "dependencies": {
     "@prisma/client": "^6.12.0",
