refactor: move Cloudflare worker code into dedicated worker directory

--- a/package.json
+++ b/package.json
@@ -9,9 +9,9 @@
     "lint": "next lint",
     "postinstall": "prisma generate",
     "deploy": "next build && next start",
-    "deploy:worker": "wrangler deploy",
-    "worker:dev": "wrangler dev",
-    "worker:tail": "wrangler tail"
+    "deploy:worker": "cd worker && wrangler deploy",
+    "worker:dev": "cd worker && wrangler dev",
+    "worker:tail": "cd worker && wrangler tail"
   },
   "dependencies": {
     "@prisma/client": "^6.12.0",
