feat: add pay-as-you-go balance monitoring and enhanced UI
- Add payAsYouGoBalance tracking in database schema
- Implement dual balance prediction with unified color system
- Add third dashboard card for pay-as-you-go balance
- Enhance responsive layout with 4-column grid
- Add dynamic chart height calculation
- Improve theme switching with system mode support
- Update chart Y-axis to use integer values
- Clean up project files and update gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -45,10 +45,33 @@ next-env.d.ts
 # prisma
 prisma/migrations
 
-# backup
-backup
+# backup and database dumps
+backup/
+backups/
+*.sql
+*.sql.gz
+*.pgdump
+
+# temporary files
+*.tmp
+*.bak
+*.backup*
+
+# logs
+logs/
+*.log
+
+# deployment scripts and reports
+*_REPORT.md
+DEPLOY_*.md
+DOCKER_*.md
+POSTGRESQL_*.md
+update-jwt.sh
 
 # cloudflare worker
 worker/.wrangler/
 worker/node_modules/
 worker/dist/
+
+# docker compose overrides
+docker-compose.override.yml
